--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -26,19 +26,16 @@
       </div>
 </div>
 
-
-
-
   <script>
-      
+
 var heart = document.querySelector('.front');
-var z = document.querySelector('.z');
+var card = document.querySelector('.cardz');
 var back = document.querySelector('.back');
 heart.addEventListener( 'click', function() {
-  z.classList.toggle('is-flipped');
+  card.classList.toggle('is-flipped');
 });
 
 back.addEventListener( 'click', function() {
-  z.classList.toggle('is-flipped');
+  card.classList.toggle('is-flipped');
 });
   </script>
