--- a/config/style.css
+++ b/config/style.css
@@ -68,7 +68,7 @@
     margin-top: 1em;
     padding: 1em;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
     min-height: 40vh;
@@ -196,6 +196,7 @@
     color: rgb(197, 197, 197);
     transform: translateY(10px);
 }
+
 .cats >form> li {
     list-style: none;
 }
