--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -43,7 +43,7 @@
     
     <div><form method="post" action="/products">
         <input type="text" name="userID" value="<%=user._id%>" hidden>
-        <input type="submit" value="Checkout" style="font-size:x-large;padding: 10px;margin-bottom: 3em;">
+        <input type="submit" value="Checkout" style="font-size:x-large;padding: 10px;margin-bottom: 3em;" class="btn btn-success btn-block mr-4">
     </form></div>
 </div>
 <%} else { %>
