--- a/views/orders_manager.ejs
+++ b/views/orders_manager.ejs
@@ -2,8 +2,8 @@
 
 <%- include ('./partials/messages') %>
 <% 
-var unseen = "#00000000"
-var unseen2 = "#0000002e"
+var unseen = "aliceblue"
+var unseen2 = "aliceblue"
 
 
 var seen ="#ff000000"
