--- a/views/product_manager.ejs
+++ b/views/product_manager.ejs
@@ -19,7 +19,7 @@
 
 
 
-<div class="productList card text-center">
+<div class="productList card text-center" style="flex-direction: row!important;">
     <% counter=1 %>
         <% products.forEach(function(data) { %>
            
@@ -50,7 +50,7 @@
 
 </div>
 
-<div class="hiddenModal" id="hiddenModal" style="visibility: hidden">
+<div class="hiddenModal" id="hiddenModal" style="visibility: hidden;    z-index: 11!important;">
     <button type="button" id="closeShopModal"
         onclick="document.getElementById('hiddenModal').classList.toggle('visible')">X</button><br><br>
         <form >
@@ -60,7 +60,7 @@
         <input name="product_id" id="product_id" type="text" style="text-align: center;display: none;" ><br>
         <input name="name" id="name" type="text" style="text-align: center" placeholder="name" autocomplete="off" minlength="1"><br>
         <input name="price" id="price" type="text" style="text-align: center" placeholder="price" minlength="1" onkeypress="return /[0-9.]/i.test(event.key)"  autocomplete="off"><br>
-        <input name="cat" id="cat" type="text" style="text-align: center" placeholder="price" minlength="1" onkeypress="return /[a-z A-Z.]/i.test(event.key)"  autocomplete="off"><br>
+        <input name="cat" id="cat" type="text" style="text-align: center" placeholder="category" minlength="1" onkeypress="return /[a-z A-Z.]/i.test(event.key)"  autocomplete="off"><br>
 
         <input name="img" id="img" type="text" style="text-align: center" placeholder="img" autocomplete="off" minlength="1"><br>
 
