--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta name="description" content="Celebration cards for everyone!">
   <meta name="keywords" content="celebration, card, gift, happy, new year, birthday, for him, for her">
+  <meta property="og:image" content="../pictures/1.jpg" />
   <script src="https://app.simplefileupload.com/buckets/3a6a9da92c8d36622eb0cd24d9183a7e.js"></script>
   <link rel="icon" type="image/x-icon" href="../pictures/logobg.png" />
   <meta charset="UTF-8" />
