--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -47,7 +47,7 @@
 <div class="shopImg">
     <div class="shopimgDiv d-flex flex-row justify-content-center">
         <div>
-            <img src="../pictures/custom1.jpg" class="offerCards" onclick="window.location.href='/products'">
+            <img src="../pictures/custom1.jpg" class="offerCards" loading="lazy" onclick="window.location.href='/products'">
         </div>
         <div class="d-flex flex-column justify-content-center">
             <h2 class="m-3 text-left">🤩Custom made🤩</h2>
@@ -60,7 +60,7 @@
             <h3 class="m-3 text-right">Score extra points with your loved ones!</h3>
         </div>
         <div>
-            <img src="../pictures/custom2.jpg" class="offerCards" onclick="window.location.href='/products'">
+            <img src="../pictures/custom2.jpg" class="offerCards" loading="lazy" onclick="window.location.href='/products'">
         </div>
     </div>
 </div>
