--- a/views/product_manager.ejs
+++ b/views/product_manager.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %>
 
 <%- include ('./partials/messages') %>
-<% if(user._id !== "") %>
+<%if(typeof user == "object" && String(user._id) === "6291085b97cb8135d0aff59c") {%>
 <div style="text-align: center;">
     
 <button type="button" style="justify-content: center" class="px-1 mt-5 btn btn-secondary" onclick="
@@ -58,9 +58,9 @@
         </form>
     <form method="post" style="display: flex; flex-direction: column; justify-content:center;">
         <input name="product_id" id="product_id" type="text" style="text-align: center;display: none;" ><br>
-        <input name="name" id="name" type="text" style="text-align: center" placeholder="name" autocomplete="off" minlength="1"><br>
-        <input name="price" id="price" type="text" style="text-align: center" placeholder="price" minlength="1" onkeypress="return /[0-9.]/i.test(event.key)"  autocomplete="off"><br>
-        <input name="cat" id="cat" type="text" style="text-align: center" placeholder="category" minlength="1" onkeypress="return /[a-z A-Z.]/i.test(event.key)"  autocomplete="off"><br>
+        <input onkeypress="checkBannedChars('name')" onkeyup="checkBannedChars('name')"  name="name" id="name" type="text" style="text-align: center" placeholder="name" autocomplete="off" minlength="1"><br>
+        <input onkeyup="checkBannedChars('price')"  name="price" id="price" type="text" style="text-align: center" placeholder="price" minlength="1" onkeypress="return /[0-9.]/i.test(event.key)"  autocomplete="off"><br>
+        <input onkeypress="checkBannedChars('cat')" onkeyup="checkBannedChars('cat')"  name="cat" id="cat" type="text" style="text-align: center" placeholder="category" minlength="1" onkeypress="return /[a-z A-Z.]/i.test(event.key)"  autocomplete="off"><br>
 
         <input name="img" id="img" type="text" style="text-align: center" placeholder="img" autocomplete="off" minlength="1"><br>
 
@@ -83,3 +83,8 @@
     }
     
 </script>
+<%} else {%>
+<script>
+window.location.href = window.location.origin
+</script>
+<%}%>
