--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,14 +38,17 @@
         <% if(typeof user=="object" && user._id != "6291085b97cb8135d0aff59c"){%>
         <a href="/basket" class="btn btn-success btn-block mr-2" style="white-space:nowrap;">Basket</a>
         <%}%>
+        
     </div>
 
     <div class="navRight">
         <% if (typeof user=="object" ) { %>
             <% if ( user._id != "6291085b97cb8135d0aff59c" ) { %>
                 <a href="/contact" class="btn btn-secondary btn-block">Contact</a>
+                <button class="btn btn-secondary btn-block" style="white-space:nowrap;" onclick="location.href='tel:+447881505554';">☎</button>
                 <% } } else { %>
                     <a href="/contact" class="btn btn-secondary btn-block">Contact</a>
+                    <button class="btn btn-secondary btn-block" style="white-space:nowrap;" onclick="location.href='tel:+447881505554';">☎</button>
                     <% } %>
     </div>
 
