--- a/config/style.css
+++ b/config/style.css
@@ -4,11 +4,11 @@
     margin: 0;
     padding: 0;
     font-family: 'Noto Sans', sans-serif!important;
-    /* -webkit-user-select: none;  /* Chrome all / Safari all */
-    /* -moz-user-select: none;     Firefox all */
-    /* -ms-user-select: none;      IE 10+ */
-    /* -o-user-select: none; */
-    /* user-select: none; */ 
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /*Firefox all */
+    -ms-user-select: none;      /*IE 10+ */
+    -o-user-select: none; 
+    user-select: none; 
 }
 
 .header {
