--- a/views/products.ejs
+++ b/views/products.ejs
@@ -39,11 +39,14 @@
         <% products.forEach(function(data) { %>
         <div class="productListContainer">
             <form action="/add" method="post">
-            <input type="text" name="user" value="<%=user._id%>" hidden>
-            <input type="text" name="productName" value="<%=data.name%>" hidden>
-            <input name="qty" type="number" placeholder="1" value="1" min="1" style="text-align: center; max-width: 50px; margin: 2px 6px 0px 10px;font-size: x-large;border-radius: 25%;">
-            <button onkeypress="checkBannedChars('name')" onkeyup="checkBannedChars('message')" class="addButton" type="submit" onclick="addToBasket('<%=data.name%>');" style="text-align: center; margin: 2px 10px 0px 6px; padding: 6px;border: none;border-radius: 25%;font-size: x-large;">Add</button>
-            </form>
+                <% if(typeof user == "object") { %>
+                <input type="text" name="user" value="<%=user._id%>" hidden>
+                <%}%>
+                <input type="text" name="productName" value="<%=data.name%>" hidden>
+                <input name="qty" type="number" placeholder="1" value="1" min="1" style="text-align: center; max-width: 50px; margin: 2px 6px 0px 10px;font-size: x-large;border-radius: 25%;">
+                <button onkeypress="checkBannedChars('name')" onkeyup="checkBannedChars('message')" class="addButton" type="submit" onclick="addToBasket('<%=data.name%>');" style="text-align: center; margin: 2px 10px 0px 6px; padding: 6px;border: none;border-radius: 25%;font-size: x-large;">Add</button>
+                    
+        </form>
             <div class="product"><img src="<%=data.img%>" class="productPicture"></div>
             <p id="p<%= counter %>" style="font-size: 1.4em;font-weight: bold;word-break: break-word;overflow: hidden;white-space: nowrap;width: 200px;" onmouseenter="this.style='font-size: 1.4em;font-weight: bold;overflow:visible;word-break: break-all;width: 200px'" onmouseleave="this.style='overflow:hidden;white-space: nowrap;width: 200px;word-break: break-word;font-size: 1.4em;font-weight: bold;'"><%= data.name %></p>
             <div style="font-weight: bold; transform: translateY(-20px);">£<%= data.price %></div>
