--- a/views/products.ejs
+++ b/views/products.ejs
@@ -16,6 +16,15 @@
          
                     <% } }); %>
                 <form method="get"><li><input hidden type="text" name="sortingBy" value="null" class="btn btn-info"><button class="btn btn-info" type="submit">Not Categorized</button></li></form>
+                <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="autorelaxed"
+                data-ad-client="ca-pub-4547162434366843"
+                data-ad-slot="2001560739"></ins>
+           <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+           </script>
+            
             </div>
         </div>
     </div>
