--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,10 +2,10 @@
 
     <div class="navLeft" id="navLeft" style="white-space:nowrap">
         <div>
-            <img src="../../pictures/logobg.png" style="max-width:120px;transform: translate(39px, 6px);position: fixed;z-index: 4;">
+            <img src="../../pictures/logobg.png" style="max-width:120px;z-index: 4;">
         </div>
         <div>
-            <h1 onclick="window.location.href='/dashboard'" style="position: fixed; font-family: 'Great Vibes', cursive!important; font-size:4em;z-index: 5;">Celebration<br>Card</h1>
+            <h1 onclick="window.location.href='/dashboard'" style="font-family: 'Great Vibes', cursive!important; font-size:4em;z-index: 5;">Celebration<br>Card</h1>
         </div>
         <div style="padding: 3em 12em 6em 2em;"></div>
     </div>
